fix: Switched to storing the refresh tokens in cookies, added an endpoint for sending notifications to existing users, and created a liberal cors policy (for now)
