# src/routes/message.js
@@ -7,6 +7,7 @@ router.get('/:id', authenticateJWT, MessageController.getMessage)
 router.get('', authenticateJWT, MessageController.getMessages)
 router.get('/:id/read', authenticateJWT, MessageController.markAsRead)
 router.delete('/:id', authenticateJWT, MessageController.deleteMessage)
+router.post('', authenticateJWT, MessageController.newMessage)
 router.delete('', authenticateJWT, MessageController.deleteAllMessages)
 
 module.exports = router
